--- a/contato/contato.html
+++ b/contato/contato.html
@@ -38,7 +38,7 @@
       class="navbar w-nav"
     >
       <div>
-        <a href="#" class="w-nav-brand"><img src="./images/logo.png" loading="lazy" width="167" height="60" srcset="./images/logo.png 500w, ./images/logo.png 594w " sizes="167px" alt="" class="image-14"/></a>
+        <a href="#" class="w-nav-brand"><img src="../images/logo.png" loading="lazy" width="167" height="60" srcset="../images/logo.png 500w, ../images/logo.png 594w " sizes="167px" alt="" class="image-14"/></a>
         <nav role="navigation" class="w-nav-menu">
           <a href="../index.html" class="nav-link w-nav-link">Home</a
           ><a
