fix: Ajustes gramaticais e tudo mais

--- a/contato/contato.html
+++ b/contato/contato.html
@@ -1,7 +1,7 @@
 <html class="site-scrollbar allow-drag-cursor wf-design-mode" lang="en">
     <head>
         <meta charset="utf-8" />
-        <title>Designer</title>
+        <title>Zebulom BJJ</title>
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link
           rel="stylesheet"
@@ -14,11 +14,6 @@
         <script src="../js/min.js"></script>
         <style></style>
         <link rel="stylesheet" type="text/css" />
-        <script
-          type="text/javascript"
-          src="https://www.paypal.com/sdk/js?client-id=sb&merchant-id=XXX&commit=false"
-          data-uid-auto="uid_wozxfjdbvtrflvsisqpnlrprksvfvd"
-        ></script>
         <script type="text/javascript" src="https://js.stripe.com/v3/"></script>
         <style type="text/css" rel="stylesheet"></style>
         <style data-meta="local styles"></style>
@@ -72,9 +67,14 @@
       <img
         src="../images/b3.jpg"
         loading="lazy"
-        width="1929"
         alt=""
-        class="image"
+        sizes="100vw"
+        srcset="
+          ../images/b3.jpg  500w,
+          ../images/b3.jpg  800w,
+          ../images/b3.jpg 1600w,
+          ../images/b3.jpg 1708w
+        "
       />
     </div>
     <div class="section">
@@ -82,20 +82,29 @@
         <div>
           <h1 class="heading-2">E-MAILS:</h1>
           <div class="text-block-11">
-            zebulombjj@gmai.com<br />carlos@gmail.com
+            <blockquote>
+              zebulom.jiu@gmail.com<br />
+            </blockquote>
           </div>
         </div>
+        <br>
         <div>
           <h1 class="heading-2">TELEFONES</h1>
           <div class="text-block-11">
-            +55 (99) 99999-9999<br />(61) 3223-0000
+            <blockquote>
+              (61)9 9967-9522 <br>
+              (61)9 9802-9936 <br>
+              (61)9 9850-8799 <br>
+            </blockquote>
           </div>
         </div>
+        <br>
         <div>
           <h1 class="heading-2">LOCALIZAÇÃO</h1>
           <div class="text-block-11">
-            Bloco H<br />SCLRN 716, Loja 47<br />Asa Norte<br />Basilia,
-            Distrito Federal
+            <blockquote>
+              Quadra 35 Lote P Parque das Américas, <br> Jardim ABC, <br> Cidade Ocidental - GO, 72899-000
+            </blockquote>
           </div>
         </div>
       </div>
