--- a/nossa_historia/nossa_historia.html
+++ b/nossa_historia/nossa_historia.html
@@ -1,7 +1,7 @@
 <html class="site-scrollbar allow-drag-cursor wf-design-mode" lang="en" z>
   <head>
     <meta charset="utf-8" />
-    <title>Designer</title>
+    <title>Zebulom BJJ</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
       rel="stylesheet"
@@ -14,11 +14,6 @@
     <script src="../js/min.js"></script>
     <style></style>
     <link rel="stylesheet" type="text/css" />
-    <script
-      type="text/javascript"
-      src="https://www.paypal.com/sdk/js?client-id=sb&merchant-id=XXX&commit=false"
-      data-uid-auto="uid_wozxfjdbvtrflvsisqpnlrprksvfvd"
-    ></script>
     <script type="text/javascript" src="https://js.stripe.com/v3/"></script>
     <style type="text/css" rel="stylesheet"></style>
     <style data-meta="local styles"></style>
@@ -81,6 +76,81 @@
       <div class="div-block-8">
         <h1 class="heading-3">UMA HISTÓRIA DE MAIS DE UMA DÉCADA</h1>
       </div>
+      <div class="div-block-14">
+        <div class="columns-3 w-row">
+          <div class="w-col w-col-5">
+            <div class="div-block-12">
+              <div class="text-block-8">Décimo primeiro ano</div>
+              <div class="div-block-11"></div>
+              <div class="text-block-11">
+                Com o avanço da vacinação e uma folga maior nos horários de funcionamento estipulados pelo governo estadual, o número de alunos voltou a crescer, assim como a equipe e a quantidade de competidores.
+              </div>
+            </div>
+          </div>
+          <div class="column-18 w-col w-col-2">
+            <img
+              src="../images/circl.png"
+              loading="lazy"
+              width="88"
+              alt=""
+              class="image-7"
+            />
+          </div>
+          <div class="column-16 w-col w-col-5">
+            <div class="text-block-14">2021</div>
+          </div>
+        </div>
+      </div>
+      <div class="div-block-13">
+        <div class="columns-2 w-row">
+          <div class="column-15 w-col w-col-5">
+            <div class="text-block-13">2020</div>
+          </div>
+          <div class="column-17 w-col w-col-2">
+            <img
+              src="../images/circl.png"
+              loading="lazy"
+              width="88"
+              alt=""
+              class="image-7"
+            />
+          </div>
+          <div class="w-col w-col-5">
+            <div class="div-block-12">
+              <div class="text-block-8">Décimo ano</div>
+              <div class="div-block-11"></div>
+              <div class="text-block-11">
+                Conseguimos estabelecer horários de treino, seguindo diversos protocolos de segurança e limpeza. Alguns alunos conseguiram participar de campeonatos estaduais e interestaduais.
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="div-block-14">
+        <div class="columns-3 w-row">
+          <div class="w-col w-col-5">
+            <div class="div-block-12">
+              <div class="text-block-8">Nono ano</div>
+              <div class="div-block-11"></div>
+              <div class="text-block-11">
+                Início da Pandemia mundial do SARS-CoV-2, forçando uma mudança nos treinos e tendo uma evasão dos alunos devido ao medo provocado pelo vírus.
+              </div>
+            </div>
+          </div>
+          <div class="column-18 w-col w-col-2">
+            <img
+              src="../images/circl.png"
+              loading="lazy"
+              width="88"
+              alt=""
+              class="image-7"
+            />
+          </div>
+          <div class="column-16 w-col w-col-5">
+            <div class="text-block-14">2019</div>
+          </div>
+        </div>
+      </div>
       <div class="div-block-13">
         <div class="columns-2 w-row">
           <div class="column-15 w-col w-col-5">
@@ -97,12 +167,10 @@
           </div>
           <div class="w-col w-col-5">
             <div class="div-block-12">
-              <div class="text-block-8">INALGURACAO DA ASA NORTE</div>
+              <div class="text-block-8">Oitavo ano.</div>
               <div class="div-block-11"></div>
               <div class="text-block-11">
-                Em 2018 Aconteceram diversas coisas marcantes. Inauguramos o
-                nosso centro de treinamento da Asa Norte. Infelizmente houve o
-                fim do Projeto CMA, o fim da parceria com a Strong Figthers.
+                É inaugurada uma academia na Asa Norte de Brasília. Com o fim do apoio das igrejas, o projeto muda de endereço, para uma sede própria, localizada na Quadra 35 Lote P Parque das Américas, Jardim ABC, Cidade Ocidental
               </div>
             </div>
           </div>
@@ -112,12 +180,10 @@
         <div class="columns-3 w-row">
           <div class="w-col w-col-5">
             <div class="div-block-12">
-              <div class="text-block-8">PERCERIAS</div>
+              <div class="text-block-8">Sétimo ano</div>
               <div class="div-block-11"></div>
               <div class="text-block-11">
-                Inicio da Parceria com Igreja Alvorada, na asa norte, para
-                ministrar Jiu-jitsu. Houve também, junto com isso, uma parceria
-                também do projeto CMA com a igreja.
+                Com grandes resultado dentro e fora do tatame, o projeto ganha um novo parceiro, agora expandindo o projeto para a igreja Presbiteriana Alvorada.
               </div>
             </div>
           </div>
@@ -145,21 +211,17 @@
               src="../images/circl.png"
               loading="lazy"
               width="88"
+
               alt=""
               class="image-7"
             />
           </div>
           <div class="w-col w-col-5">
             <div class="div-block-12">
-              <div class="text-block-8">
-                INCLUSÃO FEMINIA E CAMPEONATOS INTERNACIONAIS
-              </div>
+              <div class="text-block-8">Sexto ano</div>
               <div class="div-block-11"></div>
               <div class="text-block-11">
-                Nesse período, Houve a priorização dos treinos de Jiu-jitsu e
-                defesa pessoal para mulheres. Houve também a criação de treinos
-                exclusivamente femininos na academia Strong. No mesmo ano Houve
-                também participação de competições internacionais no Chile.
+                Com o aumento do público feminino, foi destinado um horário exclusivo para o treino de competição para a equipe feminina, com a inclusão de treinos de autodefesa.
               </div>
             </div>
           </div>
@@ -169,12 +231,10 @@
         <div class="columns-3 w-row">
           <div class="w-col w-col-5">
             <div class="div-block-12">
-              <div class="text-block-8">CAMPEONATO NAGA</div>
+              <div class="text-block-8">Quinto ano</div>
               <div class="div-block-11"></div>
               <div class="text-block-11">
-                Nos dias 14 e 15 de Março houve o campeonato NAGA edição BRAZIL
-                em Brasilia-DF no ginásio do Cruzeiro, nessa campeonato foram
-                conquistados 2 cinturões.
+                Um grande ano para o jiu-jitsu em Brasília, ao receber um grande evento, conhecido como NAGA, North American Granppling  Association, onde o dois alunos do projeto conquistar dois cinturões. 
               </div>
             </div>
           </div>
@@ -208,12 +268,10 @@
           </div>
           <div class="w-col w-col-5">
             <div class="div-block-12">
-              <div class="text-block-8">NASCIMENTO DO PROJETO CMA</div>
+              <div class="text-block-8">Quarto ano</div>
               <div class="div-block-11"></div>
               <div class="text-block-11">
-                Inicio do Projeto CMA (Christian Martial Art), outro projeto
-                social associado a Zebulom, para ensinar artes marciais em
-                igrejas.
+                Com ótimos resultados em diversos campeonatos, o projeto ganhou um novo apoiador, mudando a área de treino para o salão da igreja Presbiteriana Novo Caminho, além de renovar e aumentar o número de placas de tatame, conseguindo alcançar um número maior de crianças e adolescentes praticantes.
               </div>
             </div>
           </div>
@@ -223,11 +281,10 @@
         <div class="columns-3 w-row">
           <div class="w-col w-col-5">
             <div class="div-block-12">
-              <div class="text-block-8">ENTRADA NO ABC</div>
+              <div class="text-block-8">Terceiro ano</div>
               <div class="div-block-11"></div>
               <div class="text-block-11">
-                Depois de muito tempo, a equipe conseguiu uma loja como espaço
-                físico para a equipe, com placas e tatame para treinar.
+                Foi um ano conturbado, com diversas mudanças de endereço, mas mantendo o ótimo resultados em competições.
               </div>
             </div>
           </div>
@@ -261,13 +318,10 @@
           </div>
           <div class="w-col w-col-5">
             <div class="div-block-12">
-              <div class="text-block-8">SEGUNDO ANO</div>
+              <div class="text-block-8">Segundo ano</div>
               <div class="div-block-11"></div>
               <div class="text-block-11">
-                Depois de apenas um ano , uma equipe de mais de 20 pessoas foi
-                formada e muitos campeonatos realizados, incluindo o Pan
-                Americano, com um aproveitamento de 19 medalhas em 22
-                campeonatos. Também houveram campeonatos internos
+                As participações em competições esportivas de jiu-jitsu continuam, como destaque o campeonato Pan-americano de jiu-jitsu, levando vinte alunos e conquistando dezenove medalhas.
               </div>
             </div>
           </div>
@@ -277,12 +331,10 @@
         <div class="columns-3 w-row">
           <div class="w-col w-col-5">
             <div class="div-block-12">
-              <div class="text-block-8">INICIO DE TUDO</div>
+              <div class="text-block-8">Início do projeto social.</div>
               <div class="div-block-11"></div>
               <div class="text-block-11">
-                Inicio do projeto social, inicialmente na academia Distrito da
-                Luta e no ABC. Contou com apenas 2 pessoas, com uma medalha de
-                prata e outra de bronze.
+                Professor Carlos Nascimento, na época faixa roxa de jiu-jitsu, começou o projeto na antiga associação da cidade. E com o apoio da academia Distrito da Luta, consegui inscrever os dois primeiros alunos em um campeonato de jiu-jitsu, trazendo uma medalha ouro e outra de prata. 
               </div>
             </div>
           </div>
