--- a/sobre_nos/sobre-nos.html
+++ b/sobre_nos/sobre-nos.html
@@ -1,7 +1,7 @@
 <html class="site-scrollbar allow-drag-cursor wf-design-mode" lang="en">
     <head>
         <meta charset="utf-8" />
-        <title>Designer</title>
+        <title>Zebulom BJJ</title>
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link
           rel="stylesheet"
@@ -14,11 +14,6 @@
         <script src="../js/min.js"></script>
         <style></style>
         <link rel="stylesheet" type="text/css" />
-        <script
-          type="text/javascript"
-          src="https://www.paypal.com/sdk/js?client-id=sb&merchant-id=XXX&commit=false"
-          data-uid-auto="uid_wozxfjdbvtrflvsisqpnlrprksvfvd"
-        ></script>
         <script type="text/javascript" src="https://js.stripe.com/v3/"></script>
         <style type="text/css" rel="stylesheet"></style>
         <style data-meta="local styles"></style>
@@ -72,9 +67,14 @@
       <img
         src="../images/B4.jpg"
         loading="lazy"
-        width="1929"
         alt=""
-        class="image"
+        sizes="100vw"
+        srcset="
+          ../images/B4.jpg  500w,
+          ../images/B4.jpg  800w,
+          ../images/B4.jpg 1600w,
+          ../images/B4.jpg 1708w
+        "
       />
     </div>
     <div class="section">
@@ -82,19 +82,27 @@
         <div>
           <h1 class="heading-2">QUEM SOMOS:</h1>
           <div class="text-block-11">
-            Esse é um texto para ser preenchido
+            <blockquote>
+              Somos uma escola de JiuJitsu competitivo, focado em gerar grandes atletas, e de alta performance. Tentamos mudar a vida de cada um de nossos alunos atravez da luta.
+            </blockquote>
           </div>
         </div>
+        <br>
         <div>
           <h1 class="heading-2">NOSSOS OBJETIVOS:</h1>
           <div class="text-block-11">
-            Esse é um texto para ser preenchido
+            <blockquote>
+              Nosso objetivo é mudar a vida das pessoas dentro e fora do tatame, ajudando todods a evoluir como pessoa, e lutar. Juntos, pregamos respeito e educação, assim podemos crescer como familia.
+            </blockquote>
           </div>
         </div>
+        <br>
         <div>
           <h1 class="heading-2">NOSSAS PROPOSTAS:</h1>
           <div class="text-block-11">
-            Esse é um texto para ser preenchido
+            <blockquote>
+              Atravez do jiu-jitsu, mudamos e moldamos nossos habitos, fortalecendo corpo e alma. Cuidamos uns dos outros como uma familia, prezando pelo respeito sempre aos mais proximos.
+            </blockquote>
           </div>
         </div>
       </div>
