--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Designer</title>
+    <title>Zebulom BJJ</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" type="text/css" href="./stylesheets/normalize.css" />
     <link rel="stylesheet" type="text/css" href="home.css" />
@@ -59,15 +59,13 @@
       <img
         src="./images/a1.jpg"
         loading="lazy"
-        width="1929"
         alt=""
-        class="image"
         sizes="100vw"
         srcset="
+          ./images/a1.jpg  500w,
           ./images/a1.jpg  800w,
-          ./images/a1.jpg 1080w,
           ./images/a1.jpg 1600w,
-          ./images/a1.jpg 1703w
+          ./images/a1.jpg 1708w
         "
       />
     </div>
